--- a/src/app/pucar/public/index.html
+++ b/src/app/pucar/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>PUCAR: caronas universitárias</title>
+    <link rel="stylesheet" href="sweetalert2/dist/sweetalert2.min.css">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
