--- a/src/app/pucar/src/pages/styles/home.css
+++ b/src/app/pucar/src/pages/styles/home.css
@@ -1,12 +1,3 @@
-.bg-main {
-  display: flex;
-  flex: 1;
-  min-height: 100%;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-}
-
 .container-home {
   display: flex;
   flex: 1;
@@ -14,9 +5,19 @@
   width: 100%;
   height: 100%;
   max-width: 1024px;
-  background-color: #f1f1ff;
+  background-color: #f1f1f1;
   border-radius: 30px 30px 0 0;
   padding: 1.5rem;
+}
+
+.caronas-grid {
+  width: 100%;
+  justify-content: center;
+  justify-items: center;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(360px, 1fr));
+  grid-gap: 2rem;
+  margin-bottom: 7rem;
 }
 
 .logo-wrapper {
@@ -39,5 +40,11 @@
 @media (max-width: 720px) {
   .logo-wrapper {
     width: 100%;
+  }
+}
+
+@media (min-width: 720px) {
+  .caronas-grid {
+    margin-bottom: 8.5rem;
   }
 }
