--- a/src/app/pucar/src/components/styles/ActionBar.css
+++ b/src/app/pucar/src/components/styles/ActionBar.css
@@ -4,7 +4,7 @@
   height: 8rem;
   width: 100%;
   background-color: #1b98e0;
-  color: #f1f1f1;
+  color: #fdfdfd;
   font-weight: bold;
   font-size: 2rem;
   position: fixed;
