--- a/src/app/pucar/src/pages/styles/home.css
+++ b/src/app/pucar/src/pages/styles/home.css
@@ -5,7 +5,7 @@
   width: 100%;
   height: 100%;
   max-width: 1024px;
-  background-color: #f1f1f1;
+  background-color: #fdfdfd;
   border-radius: 30px 30px 0 0;
   padding: 1.5rem;
 }
