--- a/src/app/pucar/src/pages/styles/ridesDetail.css
+++ b/src/app/pucar/src/pages/styles/ridesDetail.css
@@ -2,10 +2,11 @@
   display: flex;
   flex: 1;
   flex-direction: column;
-  background-color: #f1f1f1;
+  background-color: #fdfdfd;
   padding: 2rem;
   width: 100%;
   margin-bottom: 8rem;
+  border-radius: 30px 30px 0 0;
 }
 
 .caronadetail-condutor-info {
@@ -39,11 +40,12 @@
   display: flex;
   flex-direction: column;
   margin-bottom: 2rem;
+  min-width: 70%;
 }
 
 .caronadetail-info .caronadetail-info-container {
   margin-top: 2rem;
-  background-color: #ffffff;
+  background-color: #f4f4f4;
   border-radius: 16px;
   display: flex;
   align-items: center;
@@ -100,7 +102,7 @@
     align-items: center;
     margin-top: 3rem;
     margin-bottom: 0;
-    padding-bottom: 5rem;
+    padding-bottom: 10rem;
   }
 
   .caronadetail-condutor-info {
