--- a/src/app/pucar/src/components/styles/input.css
+++ b/src/app/pucar/src/components/styles/input.css
@@ -5,7 +5,7 @@
     border-radius:  15px;
     background-color: #fff;
     padding: 1rem;
-    min-width: 90%;
+    width: 100%;
 }
 
 input:invalid {
